--- a/CSS/global.css
+++ b/CSS/global.css
@@ -70,19 +70,62 @@ body {
   width: 10px;
   height: auto;
 }
+.header__logo:hover {
+  cursor: pointer;
+}
 .header__nav-list {
   display: flex;
   justify-content: space-between;
-  width: 250px;
+  width: 300px;
+  padding: 0px 40px;
+  font-family: "Montserrat", sans-serif;
 }
 .header__nav-list:hover {
   cursor: pointer;
 }
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 590px) {
   .header__nav-list {
     display: none;
   }
 }
+.header__nav-list--item {
+  gap: 30px;
+}
 .header__button {
-  padding: 1%;
+  margin: 1.5%;
+  width: 140px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  background-color: #FAFAFA;
+  color: #F7941E;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  border: 1px solid #F7941E;
+  border-radius: 5px;
+}
+.header__button:hover {
+  cursor: pointer;
+  background-color: #ececec;
+  transition: 0.6s;
+}
+@media screen and (max-width: 1024px) {
+  .header__button {
+    width: 120px;
+    height: 35px;
+    font-weight: 100;
+  }
+}
+@media screen and (max-width: 375px) {
+  .header__button {
+    width: 70px;
+    height: 45px;
+    font-weight: 100;
+    border: 0.5px solid #F7941E;
+  }
 }/*# sourceMappingURL=global.css.map */
