--- a/CSS/global.css
+++ b/CSS/global.css
@@ -128,4 +128,47 @@ body {
     font-weight: 100;
     border: 0.5px solid #F7941E;
   }
+}
+
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+@media screen and (max-width: 375px) {
+  .main {
+    flex-direction: column;
+  }
+}
+.main__text {
+  box-sizing: border-box;
+  padding: 8%;
+}
+
+.main-section {
+  width: 50%;
+  background-color: #F1F1F2;
+  flex-direction: column;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  text-align: left;
+}
+.main-section__photo {
+  width: 100%;
+  height: 100%;
+}
+@media screen and (max-width: 375px) {
+  .main-section {
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+  }
+}
+
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  font-size: 47px;
+  line-height: 69px;
 }/*# sourceMappingURL=global.css.map */
