--- a/HW_Bilevych_6/scss/components/_main.scss
+++ b/HW_Bilevych_6/scss/components/_main.scss
@@ -28,12 +28,16 @@
         height: 100%;
     }
 
+    // &__btn {
+
+    // }
+
+    
     @media screen and (max-width: 375px) {
         flex-direction: column;
         width: 100%;
         height: auto;
     }
-
 }
 
 h2 {
@@ -42,3 +46,16 @@ h2 {
     font-size: 47px;
     line-height: 69px;
 }
+
+h3 {
+    font-family: $font;
+    font-size: 32px;
+    line-height: 140.62%;
+}
+
+section p {
+    font-family: $font;
+    font-size: 20px;
+    line-height: 140.62%;
+}
+
