--- a/HW_Bilevych_6/scss/components/_header.scss
+++ b/HW_Bilevych_6/scss/components/_header.scss
@@ -54,7 +54,6 @@ body {
         justify-content: center;
         box-sizing: border-box;
         background-color: $header_bg;
-        color: $orange;
         font-weight: 400;
 
         &:hover {
@@ -65,18 +64,18 @@ body {
 
         @include btn;
 
-        @media screen and (max-width: 1024px) {
-            width: 120px;
-            height: 35px;
-            font-weight: 100;
-        }
+        // @media screen and (max-width: 1024px) {
+        //     width: 120px;
+        //     height: 35px;
+        //     font-weight: 100;
+        // }
 
-        @media screen and (max-width: 375px) {
-            width: 70px;
-            height: 45px;
-            font-weight: 100;
-            border: 0.5px solid $orange;
-        }
+        // @media screen and (max-width: 375px) {
+        //     width: 70px;
+        //     height: 45px;
+        //     font-weight: 100;
+        //     border: 0.5px solid $orange;
+        // }
     }
 
 
