--- a/CSS/global.css
+++ b/CSS/global.css
@@ -100,14 +100,17 @@ body {
   justify-content: center;
   box-sizing: border-box;
   background-color: #FAFAFA;
-  color: #F7941E;
   font-weight: 400;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
+  width: 140px;
+  height: 40px;
   border: 1px solid #F7941E;
   border-radius: 5px;
+  box-sizing: border-box;
+  color: #F7941E;
 }
 .header__button:hover {
   cursor: pointer;
@@ -117,14 +120,14 @@ body {
 @media screen and (max-width: 1024px) {
   .header__button {
     width: 120px;
-    height: 35px;
+    height: auto;
     font-weight: 100;
   }
 }
 @media screen and (max-width: 375px) {
   .header__button {
-    width: 70px;
-    height: 45px;
+    width: auto;
+    height: auto;
     font-weight: 100;
     border: 0.5px solid #F7941E;
   }
@@ -153,10 +156,48 @@ body {
   align-items: flex-start;
   justify-content: center;
   text-align: left;
+  box-sizing: border-box;
 }
 .main-section__photo {
   width: 100%;
   height: 100%;
+}
+.main-section__btn {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  width: 140px;
+  height: 40px;
+  border: 1px solid #F7941E;
+  border-radius: 5px;
+  box-sizing: border-box;
+  color: #F7941E;
+  margin-top: 20px;
+}
+@media screen and (max-width: 1024px) {
+  .main-section__btn {
+    width: 120px;
+    height: auto;
+    font-weight: 100;
+  }
+}
+@media screen and (max-width: 375px) {
+  .main-section__btn {
+    width: auto;
+    height: auto;
+    font-weight: 100;
+    border: 0.5px solid #F7941E;
+  }
+}
+@media screen and (max-width: 375px) {
+  .main-section__btn {
+    margin-top: 10px;
+  }
+}
+.main-section__orange {
+  background-color: #F7941E;
+  color: #FFFFFF;
 }
 @media screen and (max-width: 375px) {
   .main-section {
@@ -171,6 +212,12 @@ h2 {
   font-weight: 800;
   font-size: 47px;
   line-height: 69px;
+}
+@media screen and (max-width: 375px) {
+  h2 {
+    font-size: 30px;
+    line-height: 45px;
+  }
 }
 
 h3 {
