--- a/HW_Bilevych_6/scss/components/_main.scss
+++ b/HW_Bilevych_6/scss/components/_main.scss
@@ -16,21 +16,33 @@
 
 .main-section {
     width: 50%;
+    // height: auto;
     background-color: $main_bg;
     flex-direction: column;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     text-align: left;
+    box-sizing: border-box;
 
     &__photo {
         width: 100%;
         height: 100%;
     }
 
-    // &__btn {
+    &__btn {
+        @include btn;
+        margin-top: 20px;
 
-    // }
+        @media screen and (max-width: 375px) {
+            margin-top:  10px;
+        }
+    }
+
+    &__orange {
+        background-color: $orange;
+        color: $white;
+    }
 
     
     @media screen and (max-width: 375px) {
@@ -45,6 +57,11 @@ h2 {
     font-weight: 800;
     font-size: 47px;
     line-height: 69px;
+
+    @media screen and (max-width: 375px) {
+        font-size: 30px;
+        line-height: 45px;
+    }
 }
 
 h3 {
