--- a/HW_Bilevych_6/scss/utils/_mixins.scss
+++ b/HW_Bilevych_6/scss/utils/_mixins.scss
@@ -4,12 +4,27 @@
     font-size: 14px;
     line-height: 20px;
     text-transform: uppercase;
-
+    width: 140px;
+    height: 40px;
     border: 1px solid $orange;
     border-radius: 5px;
+    box-sizing: border-box;
+    color: $orange;
+
+    @media screen and (max-width: 1024px) {
+        width: 120px;
+        height: auto;
+        font-weight: 100;
+    }
+
+    @media screen and (max-width: 375px) {
+        width: auto;
+        height: auto;
+        font-weight: 100;
+        border: 0.5px solid $orange;
+    }
 }
 
 @mixin header_list_font {
     font-family: $font;
-
 }
