--- a/HW_Bilevych_6/scss/components/_header.scss
+++ b/HW_Bilevych_6/scss/components/_header.scss
@@ -26,6 +26,7 @@ body {
         justify-content: space-between;
         width: 300px;
         padding: 0px 40px;
+        // font-size: 1.2em;
 
         @include header_list_font;
 
