--- a/HW_Bilevych_6/scss/utils/_mixins.scss
+++ b/HW_Bilevych_6/scss/utils/_mixins.scss
@@ -12,8 +12,8 @@
     color: $orange;
 
     @media screen and (max-width: 1024px) {
-        width: 120px;
-        height: auto;
+        width: auto;
+        height: 35px;
         font-weight: 100;
     }
 
