--- a/CSS/global.css
+++ b/CSS/global.css
@@ -119,8 +119,8 @@ body {
 }
 @media screen and (max-width: 1024px) {
   .header__button {
-    width: 120px;
-    height: auto;
+    width: auto;
+    height: 35px;
     font-weight: 100;
   }
 }
@@ -146,6 +146,12 @@ body {
 .main__text {
   box-sizing: border-box;
   padding: 8%;
+}
+@media screen and (max-width: 790px) {
+  .main__text {
+    box-sizing: border-box;
+    padding: 4%;
+  }
 }
 
 .main-section {
@@ -177,8 +183,8 @@ body {
 }
 @media screen and (max-width: 1024px) {
   .main-section__btn {
-    width: 120px;
-    height: auto;
+    width: auto;
+    height: 35px;
     font-weight: 100;
   }
 }
@@ -190,18 +196,18 @@ body {
     border: 0.5px solid #F7941E;
   }
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 790px) {
   .main-section__btn {
-    margin-top: 10px;
+    margin-top: 0px;
   }
 }
 .main-section__orange {
   background-color: #F7941E;
   color: #FFFFFF;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 570px) {
   .main-section {
-    flex-direction: column;
+    display: block;
     width: 100%;
     height: auto;
   }
@@ -210,13 +216,31 @@ body {
 h2 {
   font-family: "Montserrat", sans-serif;
   font-weight: 800;
-  font-size: 47px;
+  font-size: 56px;
   line-height: 69px;
+}
+@media screen and (max-width: 1110px) {
+  h2 {
+    font-size: 50px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  h2 {
+    font-size: 38px;
+    line-height: 53px;
+  }
+}
+@media screen and (max-width: 790px) {
+  h2 {
+    font-size: 200%;
+    line-height: normal;
+  }
 }
 @media screen and (max-width: 375px) {
   h2 {
-    font-size: 30px;
-    line-height: 45px;
+    font-weight: 400;
+    font-size: 27px;
+    line-height: 35px;
   }
 }
 
@@ -230,4 +254,11 @@ section p {
   font-family: "Montserrat", sans-serif;
   font-size: 20px;
   line-height: 140.62%;
+}
+@media screen and (max-width: 1024px) {
+  section p {
+    font-size: 16px;
+    line-height: 115%;
+    margin: 15px 0;
+  }
 }/*# sourceMappingURL=global.css.map */
