--- a/HW_Bilevych_6/scss/utils/_mixins.scss
+++ b/HW_Bilevych_6/scss/utils/_mixins.scss
@@ -11,6 +11,10 @@
     box-sizing: border-box;
     color: $orange;
 
+    &:hover {
+        cursor: pointer;
+    }
+
     @media screen and (max-width: 1024px) {
         width: auto;
         height: 35px;
