--- a/HW_Bilevych_6/scss/components/_main.scss
+++ b/HW_Bilevych_6/scss/components/_main.scss
@@ -105,9 +105,13 @@ section p {
     width: 100%;
     background-color: $orange;
     display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    // grid-auto-rows: minmax(100px, auto);
+    
 
     &:first-child {
-
+        grid-area: 2 / 2 / 2 / span 2;
     }
 
     &:nth-child(2) {
