--- a/CSS/global.css
+++ b/CSS/global.css
@@ -273,11 +273,40 @@ section p {
   width: 100%;
   background-color: #F7941E;
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 20px;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(4, minmax(40px, auto));
 }
-.get-started:first-child {
-  grid-area: 2/2/2/span 2;
+@media screen and (max-width: 570px) {
+  .get-started {
+    grid-gap: 5px;
+    grid-template-columns: 0.5fr 2fr 1fr 0.5fr;
+    grid-template-rows: repeat(4, minmax(20px, auto));
+  }
+}
+.get-started h3 {
+  grid-area: 2/2/2/span 3;
+  align-self: end;
+  box-sizing: border-box;
+  font-weight: 800;
+  font-size: 2rem;
+}
+@media screen and (max-width: 570px) {
+  .get-started h3 {
+    grid-area: 2/2/2/2;
+    font-size: 1.5rem;
+  }
+}
+.get-started p {
+  grid-area: 3/2/3/span 3;
+  font-size: 1.5rem;
+  align-self: start;
+}
+@media screen and (max-width: 570px) {
+  .get-started p {
+    grid-area: 3/2/3/2;
+    font-size: 1rem;
+  }
 }
 .get-started__btn {
   font-family: "Montserrat", sans-serif;
@@ -309,15 +338,42 @@ section p {
     border: 0.5px solid #F7941E;
   }
 }
+@media screen and (max-width: 1024px) {
+  .get-started__btn {
+    height: auto;
+  }
+}
+@media screen and (max-width: 840px) {
+  .get-started__btn {
+    height: auto;
+    padding: 4px;
+    font-size: 0.5rem;
+  }
+}
 .get-started__black-btn {
   background-color: #000000;
   color: #FFFFFF;
   font-weight: 100;
+  grid-area: 2/6/span 2/7;
+  align-self: center;
+  grid-gap: 40px;
+}
+@media screen and (max-width: 570px) {
+  .get-started__black-btn {
+    grid-area: 2/3/2/3;
+  }
 }
 .get-started__orange-btn {
   background-color: #F7941E;
   border-color: #000000;
   color: #000000;
+  grid-area: 2/7/span 2/8;
+  align-self: center;
+}
+@media screen and (max-width: 570px) {
+  .get-started__orange-btn {
+    grid-area: 3/3/3/3;
+  }
 }
 
 .blog {
