--- a/HW_Bilevych_6/scss/components/_main.scss
+++ b/HW_Bilevych_6/scss/components/_main.scss
@@ -51,7 +51,6 @@
     @media screen and (max-width: 570px) {
         display: block;
         width: 100%;
-        // min-height: 350px;
         height: auto;
     }
 }
@@ -105,37 +104,88 @@ section p {
     width: 100%;
     background-color: $orange;
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    // grid-auto-rows: minmax(100px, auto);
-    
+    grid-gap: 20px;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(4, minmax(40px, auto));
 
-    &:first-child {
-        grid-area: 2 / 2 / 2 / span 2;
+
+    @media screen and (max-width: 570px) {
+        grid-gap: 5px;
+        grid-template-columns: (0.5fr 2fr 1fr 0.5fr);
+        grid-template-rows: repeat(4, minmax(20px, auto));
     }
 
-    &:nth-child(2) {
+    h3 {
+        grid-area: 2 / 2 / 2 / span 3;
+        align-self: end;
+        box-sizing: border-box;
 
+        font-weight: 800;
+        font-size: 2rem;
+
+        @media screen and (max-width: 570px) {
+            grid-area: 2 / 2 / 2 / 2;
+            font-size: 1.5rem;
+        }
     }
+
+    p {
+        grid-area: 3 / 2 / 3 / span 3;
+        font-size: 1.5rem;
+        align-self: start;
+
+        @media screen and (max-width: 570px) {
+            grid-area: 3 / 2 / 3 / 2;
+            font-size: 1rem;
+        }
+    }
+
+
 
     &__btn {
         @include btn;
+
+        @media screen and (max-width: 1024px) {
+            height: auto;
+        }
+
+        @media screen and (max-width: 840px) {
+            height: auto;
+            padding: 4px;
+            font-size: 0.5rem;
+        }
     }
 
     &__black-btn {
         background-color: $black;
         color: $white;
         font-weight: 100;
+
+        grid-area: 2 / 6 / span 2 / 7;
+        align-self: center;
+        grid-gap: 40px;
+
+        @media screen and (max-width: 570px) {
+            grid-area: 2 / 3 / 2 / 3;
+        }
     }
 
     &__orange-btn {
         background-color: $orange;
         border-color: $black;
         color: $black;
+
+        grid-area: 2 / 7 / span 2 / 8;
+        align-self: center;
+
+        @media screen and (max-width: 570px) {
+            grid-area: 3 / 3 / 3 / 3;
+        }
     }
 }
 
+
 .blog {
     display: grid;
-    
+
 }
