--- a/CSS/global.css
+++ b/CSS/global.css
@@ -367,6 +367,7 @@ section p {
   background-color: #F7941E;
   border-color: #000000;
   color: #000000;
+  font-weight: 400;
   grid-area: 2/7/span 2/8;
   align-self: center;
 }
@@ -378,4 +379,98 @@ section p {
 
 .blog {
   display: grid;
+  grid-template-columns: 0.8fr 4fr 4fr 0.8fr;
+  grid-template-rows: 1.2fr 1.2fr 3.6fr 3fr 1fr;
+  grid-gap: 3%;
+}
+.blog__h3 {
+  grid-area: 1/2/1/span 2;
+  align-self: end;
+  text-align: center;
+}
+.blog__p {
+  grid-area: 2/2/2/span 2;
+  text-align: center;
+}
+.blog__container {
+  grid-area: 3/2/3/span 2;
+  display: flex;
+  box-sizing: border-box;
+  background-color: #231F20;
+  color: #FFFFFF;
+}
+@media screen and (max-width: 860px) {
+  .blog__container {
+    flex-direction: column;
+    align-items: center;
+    padding: 5% 0%;
+  }
+}
+.blog__container--business-card {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  gap: 6%;
+  padding-left: 7%;
+  padding-right: 15%;
+  padding-top: 2%;
+}
+@media screen and (max-width: 1000px) {
+  .blog__container--business-card {
+    padding-right: 7%;
+  }
+}
+.blog__container--business-card :first-child {
+  font-size: 1rem;
+  font-weight: 100;
+  padding-top: 6%;
+}
+.blog__container--business-card :nth-child(2) {
+  font-weight: 400;
+  font-size: 3rem;
+}
+@media screen and (max-width: 1300px) {
+  .blog__container--business-card :nth-child(2) {
+    font-size: 2.5rem;
+  }
+}
+@media screen and (max-width: 1070px) {
+  .blog__container--business-card :nth-child(2) {
+    font-size: 2rem;
+  }
+}
+.blog__container--business-card :nth-child(3) {
+  font-weight: 100;
+  font-size: 1rem;
+  padding-top: 10%;
+}
+.blog__container--business-card :nth-child(3):hover {
+  cursor: pointer;
+}
+.blog__info {
+  display: flex;
+  flex-direction: column;
+  padding: 6%;
+}
+.blog__info h3 {
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+.blog__info p {
+  padding-top: 3%;
+}
+.blog__info a {
+  text-decoration: none;
+  color: #000000;
+  font-family: "Montserrat", sans-serif;
+  padding-top: 3%;
+}
+.blog__info:hover {
+  box-shadow: 10px 5px 10px rgb(233, 233, 233);
+}
+.blog__info-1 {
+  grid-area: 4/2/4/2;
+}
+.blog__info-2 {
+  grid-area: 4/3/4/3;
 }/*# sourceMappingURL=global.css.map */
