--- a/HW_Bilevych_6/scss/components/_main.scss
+++ b/HW_Bilevych_6/scss/components/_main.scss
@@ -174,6 +174,7 @@ section p {
         background-color: $orange;
         border-color: $black;
         color: $black;
+        font-weight: 400;
 
         grid-area: 2 / 7 / span 2 / 8;
         align-self: center;
@@ -187,5 +188,120 @@ section p {
 
 .blog {
     display: grid;
+    grid-template-columns: (0.8fr 4fr 4fr 0.8fr);
+    grid-template-rows: (1.2fr 1.2fr 3.6fr 3fr 1fr);
+    grid-gap: 3%;
 
+    &__h3 {
+        grid-area: 1 / 2 / 1 / span 2;
+        align-self: end;
+        text-align: center;
+    }
+
+    &__p {
+        grid-area: 2 / 2 / 2 / span 2;
+        text-align: center;
+    }
+
+    &__container {
+        grid-area: 3 / 2 / 3 / span 2;
+        display: flex;
+        box-sizing: border-box;
+
+        background-color: $blog_bg;
+        color: $white;
+
+        @media screen and (max-width: 860px) {
+            flex-direction: column;
+            align-items: center;
+            padding: 5% 0%;
+        }
+
+        // &--img {
+        //     @media screen and (max-width: 630px) {
+        //         width: 90%;
+        //     }
+        // }
+
+        &--business-card {
+
+            display: flex;
+            flex-direction: column;
+            box-sizing: border-box;
+            gap: 6%;
+            padding-left: 7%;
+            padding-right: 15%;
+            padding-top: 2%;
+
+            @media screen and (max-width: 1000px) {
+                padding-right: 7%;
+            }
+
+
+            :first-child {
+                font-size: 1rem;
+                font-weight: 100;
+                padding-top: 6%;
+            }
+
+            :nth-child(2) {
+                font-weight: 400;
+                font-size: 3rem;
+
+                @media screen and (max-width: 1300px) {
+                    font-size: 2.5rem;
+                }
+
+                @media screen and (max-width: 1070px) {
+                    font-size: 2rem;
+                }
+            }
+
+            :nth-child(3) {
+                font-weight: 100;
+                font-size: 1rem;
+                padding-top: 10%;
+
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+
+    &__info {
+
+        display: flex;
+        flex-direction: column;
+        padding: 6%;
+
+
+        h3 {
+            font-size: 1.5rem;
+            font-weight: 800;
+        }
+
+        p {
+            padding-top: 3%;
+        }
+
+        a {
+            text-decoration: none;
+            color: $black;
+            font-family: $font;
+            padding-top: 3%;
+        }
+
+        &:hover {
+            box-shadow: 10px 5px 10px $light_shadow;
+        }
+    }
+
+    &__info-1 {
+        grid-area: 4 / 2 / 4 / 2;
+    }
+
+    &__info-2 {
+        grid-area: 4 / 3 / 4 / 3;
+    }
 }
